force-app/main/default/objects/Lead/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <description>market know how to execute</description>
    <label>Record</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>