force-app/main/default/objects/Lead/fields/Rev__c.field-meta.xml
<CustomField>
    <fullName>Rev__c</fullName>
    <label>Rev</label>
    <length>15</length>
    <type>Text</type>
</CustomField>